<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/navbar_ic_home"
        android:tooltipText="@string/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/combine_page"
        android:enabled="true"
        android:icon="@drawable/navbar_ic_combine"
        android:tooltipText="@string/combines"
        android:title="@string/combines"/>
    <item
        android:id="@+id/favorite_page"
        android:enabled="true"
        android:icon="@drawable/navbar_ic_favorite"
        android:tooltipText="@string/favorites"
        android:iconTint="@color/navbar_item"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/add_page"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:tooltipText="@string/add_clothes"
        android:title="@string/add_clothes"/>
</menu>