<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="314dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_segmented_bar"
    android:gravity="start|center"
    android:orientation="horizontal"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="@drawable/bg_segmented_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="4dp"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/camera"
            android:src="@drawable/ic_camera"
            android:tooltipText="@string/camera" />

        <Space
            android:layout_width="2dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_regular"
            android:gravity="center|start"
            android:text="@string/camera"
            android:textColor="@color/dark"
            android:textSize="12sp" />

    </LinearLayout>

    <Space
        android:layout_width="3dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="@drawable/bg_segmented_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="4dp"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/gallery"
            android:src="@drawable/ic_folder"
            android:tooltipText="@string/gallery" />

        <Space
            android:layout_width="2dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_regular"
            android:gravity="center|start"
            android:text="@string/gallery"
            android:textColor="@color/dark"
            android:textSize="12sp" />

    </LinearLayout>

    <Space
        android:layout_width="3dp"
        android:layout_height="match_parent" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:background="@drawable/bg_segmented_button"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_next_arrow_right"
        android:tooltipText="@string/next"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>