<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:background="@color/activity_background"
    tools:context=".ui.onBoarding.IntroFragment3">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardBackgroundColor="@color/card_background"
        app:shapeAppearanceOverlay="@style/G101.Cards.OnboardingCards"
        app:strokeColor="@color/transparent"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/suit_large" />

    </com.google.android.material.card.MaterialCardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Dots -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:scaleType="center"
            android:src="@drawable/ic_dot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:scaleType="center"
            android:src="@drawable/ic_dot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:scaleType="center"
            android:src="@drawable/ic_focused_dot" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!--Text area-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="@style/G101.Text.Big_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artificial_intelligence"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/G101.Text.Regular_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textSize="16sp"
            android:text="@string/intro3_desc"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>