<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_background"
    tools:context=".ui.categories.CategoriesPageActivity">

    <!-- Blur Target -->
    <eightbitlab.com.blurview.BlurTarget
        android:id="@+id/blur_target"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Scroll View -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_64dp"
                android:layout_gravity="center_horizontal">

                <!-- Filter bar -->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <!-- Chip group -->
                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal"
                        android:paddingStart="16dp"
                        tools:ignore="RtlSymmetry"
                        app:singleLine="true"
                        app:singleSelection="false"
                        android:paddingTop="@dimen/_8dp"
                        android:paddingBottom="@dimen/_8dp"
                        app:chipSpacing="@dimen/_8dp">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filter"
                            style="@style/G101.Chips.MainFilter"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/autumn"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/winter"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spring"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/summer"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Marka"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="filtreler"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="filtreler"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="filtreler"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="filtreler"
                            style="@style/G101.Chips"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="filtreler"
                            style="@style/G101.Chips"/>
                        
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <!-- Ad Banner -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                    android:src="@drawable/banner_ad_mob"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/_16dp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </eightbitlab.com.blurview.BlurTarget>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blur_view_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:blurOverlayColor="@color/blurview_overlay_color">

        <!-- Appbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_64dp"
                android:background="@color/transparent"
                app:navigationIcon="@drawable/ic_left_arrow"
                app:menu="@menu/appbar_btn_categories_appbar_help">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ic_category_icon"
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_shoe"
                    android:scaleType="center"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_48dp"
                    style="@style/G101.Text.Second_Title"
                    android:text="Ayakkabı"
                    android:layout_gravity="center" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/btn_pop_menu"
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:src="@drawable/state_dropdown_icon"
                    android:scaleType="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clipToOutline="true"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                    android:layout_gravity="center" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </eightbitlab.com.blurview.BlurView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>